another spacing fix -about page

--- a/src/App.scss
+++ b/src/App.scss
@@ -300,7 +300,7 @@ body {
 
   .about-bottom {
     display: flex;
-    gap: 6rem;
+    gap: 3.5rem;
     align-items: center;
     max-width: 1100px;
     width: 100%;
@@ -311,7 +311,7 @@ body {
     }
 
     .stats-section {
-      flex: 0 0 400px;
+      flex: 0 0 450px;
       display: flex;
       flex-direction: column;
       gap: 2rem;
